[package]
name = "gmailnator"
version = "0.2.1"
authors = ["Y0GAAAA <35837405+Y0GAAAA@users.noreply.github.com>"]
description = "An unofficial api wrapper to interact with https://gmailnator.com/"
keywords = ["gmailnator", "gmail", "tempmail"]
categories = ["api-bindings", "email"]
license = "GPL-3.0-only"
repository = "https://github.com/Y0GAAAA/gmailnator"
edition = "2018"

[dependencies]
ureq = "1.5.1"
regex = "1.4.1"
lazy_static = "1.4.0"
futures = "0.3"
url = "2.1.1"
scraper = "0.12.0"
htmlescape = "0.3.1"
serde = "1.0.117"
serde_json = "1.0.59"